Should fix the spacing

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ color: white;
 background-color: black;
 }
 .header{
-padding-top: 2vh;
+padding: 2vh 0px;
 width: 100%;
 height: 4vh;
 display: flex;
@@ -32,6 +32,7 @@ font-size: 3vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 1vh 0px;
 }
 .profile1,.profile2,.profile3,.profile4,.profile5{
   width: 8vh;
